axix-label-and-age-group-line-in-pattern

--- a/PatientTrajectory/4_AllSimilarPatientTeajectory.ipynb
+++ b/PatientTrajectory/4_AllSimilarPatientTeajectory.ipynb
@@ -72,18 +72,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\n",
-    "#     \"Pre-schooler, Male, ADHD patients, episode based patterns over time\",\n",
-    "# )\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_ADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_ADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -116,7 +111,6 @@
     "original_df = pd.read_csv(subset_dataset)\n",
     "# Create an instance of MatplotlibPatientTrajectory\n",
     "patient_trajectory = MatplotlibPatientTrajectory()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
     "custom_colors = [\n",
@@ -126,16 +120,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\"Pre-school,Male, No ADHD patients, episode based patterns over time\")\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_NoADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_NoADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -166,14 +157,11 @@
     "    subset_dataset_folder, \"SubDataset_PreSchooler_F_ADHD.csv\"\n",
     ")\n",
     "original_df = pd.read_csv(subset_dataset)\n",
-    "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectory\n",
     "patient_trajectory = MatplotlibPatientTrajectory()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
-    "\n",
     "custom_colors = [\n",
     "    (1, 0, 0, 0.3),  # Red with 50% transparency\n",
     "    (0, 1, 0, 0.3),  # Green with 50% transparency\n",
@@ -181,16 +169,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\"Pre-school,Female, ADHD patients, episode based patterns over time\")\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_ADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_ADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -221,7 +206,6 @@
     "    subset_dataset_folder, \"SubDataset_PreSchooler_F_NoADHD.csv\"\n",
     ")\n",
     "original_df = pd.read_csv(subset_dataset)\n",
-    "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectory\n",
     "patient_trajectory = MatplotlibPatientTrajectory()\n",
@@ -236,17 +220,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\"PreSchooler, Female, No ADHD patients, episode based patterns over time\")\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
-    "\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_NoADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_NoADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -277,14 +257,11 @@
     "    subset_dataset_folder, \"SubDataset_MiddleChildhood_M_ADHD.csv\"\n",
     ")\n",
     "original_df = pd.read_csv(subset_dataset)\n",
-    "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectoryMiddleChildhood\n",
     "patient_trajectory = MatplotlibPatientTrajectoryMiddleChildhood()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
-    "\n",
     "custom_colors = [\n",
     "    (1, 0, 0, 0.3),  # Red with 50% transparency\n",
     "    (0, 1, 0, 0.3),  # Green with 50% transparency\n",
@@ -292,16 +269,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\"Middle Childhood, Male, ADHD patients, episode based patterns over time\")\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_ADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_ADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -332,14 +306,11 @@
     "    subset_dataset_folder, \"SubDataset_MiddleChildhood_M_NoADHD.csv\"\n",
     ")\n",
     "original_df = pd.read_csv(subset_dataset)\n",
-    "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectoryMiddleChildhood\n",
     "patient_trajectory = MatplotlibPatientTrajectoryMiddleChildhood()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
-    "\n",
     "custom_colors = [\n",
     "    (1, 0, 0, 0.3),  # Red with 50% transparency\n",
     "    (0, 1, 0, 0.3),  # Green with 50% transparency\n",
@@ -347,18 +318,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\n",
-    "#     \"Middle Childhood, Male, No ADHD patients, episode based patterns over time\"\n",
-    "# )\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_NoADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_NoADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -389,14 +355,11 @@
     "    subset_dataset_folder, \"SubDataset_MiddleChildhood_F_ADHD.csv\"\n",
     ")\n",
     "original_df = pd.read_csv(subset_dataset)\n",
-    "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectoryMiddleChildhood\n",
     "patient_trajectory = MatplotlibPatientTrajectoryMiddleChildhood()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
-    "\n",
     "custom_colors = [\n",
     "    (1, 0, 0, 0.3),  # Red with 50% transparency\n",
     "    (0, 1, 0, 0.3),  # Green with 50% transparency\n",
@@ -404,18 +367,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\n",
-    "#     \"Middle Childhood, Female, ADHD patients, episode based patterns over time\"\n",
-    "# )\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_ADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_ADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -446,14 +404,11 @@
     "    subset_dataset_folder, \"SubDataset_MiddleChildhood_F_NoADHD.csv\"\n",
     ")\n",
     "original_df = pd.read_csv(subset_dataset)\n",
-    "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectoryMiddleChildhood\n",
     "patient_trajectory = MatplotlibPatientTrajectoryMiddleChildhood()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
-    "\n",
     "# custom_colors = [\"orange\", \"green\", \"blue\"]\n",
     "custom_colors = [\n",
     "    (1, 0, 0, 0.3),  # Red with 50% transparency\n",
@@ -462,19 +417,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\n",
-    "#     \"Middle Childhood, Female, No ADHD patients, episode based patterns over time\"\n",
-    "# )\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
-    "\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_NoADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_NoADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -503,14 +452,11 @@
     "subset_dataset_folder = os.getenv(\"SubsetDataset\")\n",
     "subset_dataset = os.path.join(subset_dataset_folder, \"SubDataset_Teenager_M_ADHD.csv\")\n",
     "original_df = pd.read_csv(subset_dataset)\n",
-    "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectoryTeenager\n",
     "patient_trajectory = MatplotlibPatientTrajectoryTeenager()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
-    "\n",
     "custom_colors = [\n",
     "    (1, 0, 0, 0.3),  # Red with 50% transparency\n",
     "    (0, 1, 0, 0.3),  # Green with 50% transparency\n",
@@ -518,16 +464,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\"Teenager, Male, ADHD patients, episode based patterns over time\")\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_M_ADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_M_ADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -556,14 +499,11 @@
     "subset_dataset_folder = os.getenv(\"SubsetDataset\")\n",
     "subset_dataset = os.path.join(subset_dataset_folder, \"SubDataset_Teenager_M_NoADHD.csv\")\n",
     "original_df = pd.read_csv(subset_dataset)\n",
-    "\n",
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectoryTeenager\n",
     "patient_trajectory = MatplotlibPatientTrajectoryTeenager()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
-    "\n",
     "custom_colors = [\n",
     "    (1, 0, 0, 0.3),  # Red with 50% transparency\n",
     "    (0, 1, 0, 0.3),  # Green with 50% transparency\n",
@@ -571,16 +511,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\"Teenager, Male, No ADHD patients, episode based patterns over time\")\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_M_NoADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_M_NoADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -623,16 +560,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\"Teenager, Female, ADHD patients, episode based patterns over time\")\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_F_ADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_F_ADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -664,10 +598,8 @@
     "print(original_df[\"cluster\"].value_counts())\n",
     "# Create an instance of MatplotlibPatientTrajectoryTeenager\n",
     "patient_trajectory = MatplotlibPatientTrajectoryTeenager()\n",
-    "\n",
     "# Call the load_data method\n",
     "processed_df = patient_trajectory.load_data(original_df)\n",
-    "\n",
     "custom_colors = [\n",
     "    (1, 0, 0, 0.3),  # Red with 50% transparency\n",
     "    (0, 1, 0, 0.3),  # Green with 50% transparency\n",
@@ -675,16 +607,13 @@
     "]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(50, 24))\n",
-    "# fig.suptitle(\"Teenager, Female, No ADHD patients, episode based patterns over time\")\n",
-    "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
     ")\n",
     "fig.show()\n",
-    "\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_F_NoADHD.jpg\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_F_NoADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
