remove cluster label from patient trajectory

--- a/PatientTrajectory/3_MatplotlibPatientTeajectory.ipynb
+++ b/PatientTrajectory/3_MatplotlibPatientTeajectory.ipynb
@@ -38,7 +38,8 @@
     "**For including in the paper will use these plots below**\n",
     "#### A.1. Patient trajectory plot based on patient age for `Gender = M`, `AgeGroup = PreSchooler` and `ADHD(Attention Deficit Hyperactivity Disorder) = 1`\n",
     "\n",
-    "#### A.2. Patient trajectory plot based on patient id for `Gender = M`, `AgeGroup = PreSchooler` and `ADHD(Attention Deficit Hyperactivity Disorder) = 1`"
+    "#### A.2. Patient trajectory plot based on patient id for `Gender = M`, `AgeGroup = MiddleChildhood` and `ADHD(Attention Deficit Hyperactivity Disorder) = 1`\n",
+    "Dataset: `SubDataset_MiddleChildhood_M_ADHD.csv`"
    ]
   },
   {
@@ -114,7 +115,7 @@
     "# Get SubsetDataset folder path from environment variables & read subset dataset CSV file\n",
     "subset_dataset_folder = os.getenv(\"SubsetDataset\")\n",
     "subset_dataset = os.path.join(\n",
-    "    subset_dataset_folder, \"SubDataset_PreSchooler_M_ADHD.csv\"\n",
+    "    subset_dataset_folder, \"SubDataset_MiddleChildhood_M_ADHD.csv\"\n",
     ")\n",
     "\n",
     "original_df = pd.read_csv(subset_dataset)\n",
@@ -126,14 +127,14 @@
     "processed_df = patient_trajectory.load_data(original_df)\n",
     "\n",
     "# Select the first fifty patients based on their patient id\n",
-    "selected_patients = processed_df[\"pasient\"].unique()[:20]\n",
+    "selected_patients = processed_df[\"pasient\"].unique()[:10]\n",
     "\n",
     "# Filter the episodes associated with the selected patients\n",
     "processed_df = processed_df[processed_df[\"pasient\"].isin(selected_patients)]\n",
     "\n",
     "custom_colors = [\"red\", \"green\", \"purple\"]\n",
     "unique_patients = processed_df[\"pasient\"].unique()\n",
-    "fig, axes = plt.subplots(1, 1, figsize=(20, 10))\n",
+    "fig, axes = plt.subplots(1, 1, figsize=(12, 8))\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
     "    processed_df, axes, custom_colors, unique_patients\n",
@@ -142,7 +143,7 @@
     "\n",
     "FigureTrajectory_folder = os.getenv(\"FigureTrajectory\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigureTrajectory_folder, \"PreSchooler_M_ADHD.eps\"),\n",
+    "    os.path.join(FigureTrajectory_folder, \"10_MiddleChildhood_M_ADHD.eps\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -193,7 +194,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Pre-schooler, Male, ADHD patient with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Pre-schooler, Male, ADHD patient with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -252,7 +253,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Pre-school,Male, No ADHD with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Pre-school,Male, No ADHD with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -312,7 +313,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Pre-school,Female, ADHD with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Pre-school,Female, ADHD with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -371,7 +372,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"PreSchooler, Female, No ADHD patient with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"PreSchooler, Female, No ADHD patient with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -431,7 +432,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Middle Childhood, Male, ADHD patient  trajectory with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Middle Childhood, Male, ADHD patient  trajectory with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -490,7 +491,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Middle Childhood, Male, No ADHD patient  trajectory with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Middle Childhood, Male, No ADHD patient  trajectory with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -550,7 +551,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Middle Childhood, Female, ADHD patient  trajectory with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Middle Childhood, Female, ADHD patient  trajectory with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -610,7 +611,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Middle Childhood, Female, No ADHD patient  trajectory with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Middle Childhood, Female, No ADHD patient  trajectory with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -668,7 +669,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Teenager, Male, ADHD patient  trajectory with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Teenager, Male, ADHD patient  trajectory with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -725,7 +726,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Teenager, Male, No ADHD patient  trajectory with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Teenager, Male, No ADHD patient  trajectory with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -783,7 +784,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Teenager, Female, ADHD patient  trajectory with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Teenager, Female, ADHD patient  trajectory with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
@@ -840,7 +841,7 @@
     "unique_patients = processed_df[\"pasient\"].unique()\n",
     "fig, axes = plt.subplots(1, 1, figsize=(30, 14))\n",
     "fig.suptitle(\n",
-    "    \"Teenager, Female, No ADHD patient  trajectory with age, count visit, cluster label, diagnosis and medication during each episode\"\n",
+    "    \"Teenager, Female, No ADHD patient  trajectory with age, count visit, diagnosis and medication during each episode\"\n",
     ")\n",
     "fig.tight_layout(pad=2)\n",
     "patient_trajectory.patient_timeline_plot_yearly(\n",
