--- a/PatientTrajectory/4_AllSimilarPatientTeajectory.ipynb
+++ b/PatientTrajectory/4_AllSimilarPatientTeajectory.ipynb
@@ -78,7 +78,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_ADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -126,7 +126,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_NoADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_M_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -175,7 +175,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_ADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -226,7 +226,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_NoADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"PreSchooler_F_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -275,7 +275,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_ADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -324,7 +324,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_NoADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_M_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -373,7 +373,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_ADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -423,7 +423,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_NoADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"MiddleChildhood_F_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -470,7 +470,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_M_ADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_M_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -517,7 +517,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_M_NoADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_M_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -566,7 +566,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_F_ADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_F_ADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
@@ -613,7 +613,7 @@
     "fig.show()\n",
     "FigurePattern_folder = os.getenv(\"FigurePattern\")\n",
     "fig.savefig(\n",
-    "    os.path.join(FigurePattern_folder, \"Teenager_F_NoADHD.eps\"),\n",
+    "    os.path.join(FigurePattern_folder, \"Teenager_F_NoADHD.jpg\"),\n",
     "    dpi=300,\n",
     "    bbox_inches=\"tight\",\n",
     ")"
